# UCAS

./: .gitignore  README.md  VGG.ipynb
AffectiveComputing/: readme.md
ComputerGraphics/: readme.md
ComputerGraphics/GAMES101/Assignment/Assignment0/: CMakeLists.txt  main.cpp
ComputerGraphics/GAMES101/TinyRenderer/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  rasterizer.cpp  rasterizer.h  tgaimage.cpp  tgaimage.h
ComputerGraphics/GAMES101/TinyRenderer/tutorial/: Lesson0.md  Lesson1.md  Lesson2.md  Lesson3.md  Lesson4.md
ComputerGraphics/Homework1/: CMakeLists.txt  main.cpp  rasterizer.hpp
KnowledgeGraph/: readme.md
Multi-AgentSystem/: Homework1.docx  Homework1.py  Homework2.docx  readme.md
Multivariate Analysis/: .0多元统计分析课程介绍.pdf.icloud  .1多元分布.pdf.icloud  .2由多元正态分布导出的分布.pdf.icloud  .3多元正态总体的推断1.pdf.icloud  .3多元正态总体的推断2.pdf.icloud  .3多元正态总体的推断3.pdf.icloud  .4 一元线性模型回顾.pdf.icloud  .4多元线性模型.pdf.icloud  .5 ‭相关分析‬.pdf.icloud  .6 主成分分析.pdf.icloud  .8 判别分析.pdf.icloud  .8 判别分析案例.pdf.icloud  .9 聚类分析.pdf.icloud  .9 聚类分析案例.pdf.icloud  .‭7 因子分析-例子‬.pdf.icloud  .‭7 因子分析‬.pdf.icloud  FA.ipynb
NLP/: .NLP1-绪论.pdf.icloud  .NLP10- 篇章分析.pdf.icloud  .NLP11- 语义分析.pdf.icloud  .NLP12- 预训练语言模型.pdf.icloud  .NLP13-机器翻译1.pdf.icloud  .NLP13-机器翻译2.pdf.icloud  .NLP13-机器翻译3.pdf.icloud  .NLP14-文本分类和聚类.pdf.icloud  .NLP15-信息抽取.pdf.icloud  .NLP16-人机对话.pdf.icloud  .NLP2-统计学习基础.pdf.icloud  .NLP3-形式语言与自动机.pdf.icloud  .NLP4-N元文法模型.pdf.icloud  .NLP5-隐马尔可夫模型与条件随机场.pdf.icloud  .NLP6-神经网络与语言模型.pdf.icloud  .NLP6-神经网络与语言模型2.pdf.icloud  .NLP7-文本表示.pdf.icloud  (+6 more)
(+979 files in other folders)
